--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin Converter and Maze Game</title>
+  <title>Bitcoin USD Converter and Game</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -29,45 +29,9 @@
       margin: 5px;
       width: 200px;
     }
-    .challenge-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-    }
-    canvas {
-      border: 2px solid #000;
-      background: #fff;
-    }
-    .sudoku-container {
-      display: none;
-      margin-top: 20px;
-    }
-    .sudoku-container table {
-      margin: 0 auto;
-      border-collapse: collapse;
-    }
-    .sudoku-container td {
-      width: 30px;
-      height: 30px;
-      text-align: center;
-      font-size: 1rem;
-      border: 1px solid #333;
-    }
-    .sudoku-container button {
-      margin-top: 10px;
-      font-size: 1.2rem;
-      padding: 8px 15px;
-    }
-    #timer {
-      font-size: 1.5rem;
-      margin-top: 20px;
-      color: #333;
-    }
   </style>
 </head>
 <body>
-  <!-- Part 1: Bitcoin and USD Conversion -->
   <div>
     <h1>Bitcoin and USD Converter</h1>
     <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
@@ -92,185 +56,43 @@
     </div>
   </div>
 
-  <!-- Part 2: Maze Game and Sudoku Integration -->
-  <div id="timer" style="font-size: 1.5rem;">Price updates every 60 seconds: 0</div>
-  <div class="challenge-container">
-    <canvas id="mazeCanvas" width="300" height="300"></canvas>
+  <!-- Maze and Sudoku Game Placeholder -->
+  <div id="gameContainer" style="margin-top: 40px;"></div>
 
-    <!-- Sudoku Container -->
-    <div id="sudokuContainer" class="sudoku-container">
-      <h2>Solve This Sudoku!</h2>
-      <table id="sudokuTable"></table>
-      <button id="solveSudokuBtn">Solve</button>
-    </div>
-  </div>
+  <!-- Load Maze and Sudoku Script -->
+  <script src="maze_sudoku.js"></script>
 
   <script>
-    // Part 1: Bitcoin and USD Conversion
-    let btcToUsdPrice = null;
-
     async function fetchBitcoinPrice() {
       try {
         const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
         if (!response.ok) throw new Error('API request failed');
         const data = await response.json();
-        btcToUsdPrice = data.bitcoin.usd;
+        const btcToUsdPrice = data.bitcoin.usd;
         document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsdPrice.toLocaleString()} USD`;
         document.getElementById('usdToBtc').innerText = `1 USD = ${(1 / btcToUsdPrice).toFixed(8)} BTC`;
+
+        document.getElementById('btcInput').addEventListener('input', (e) => {
+          const btcValue = parseFloat(e.target.value);
+          if (!isNaN(btcValue)) {
+            document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
+          }
+        });
+
+        document.getElementById('usdInput').addEventListener('input', (e) => {
+          const usdValue = parseFloat(e.target.value);
+          if (!isNaN(usdValue)) {
+            document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
+          }
+        });
       } catch (error) {
         document.getElementById('btcToUsd').innerText = 'Failed to fetch Bitcoin price.';
         document.getElementById('usdToBtc').innerText = 'Please try again later.';
       }
     }
 
-    document.getElementById('btcInput').addEventListener('input', (e) => {
-      const btcValue = parseFloat(e.target.value);
-      if (!isNaN(btcValue) && btcToUsdPrice) {
-        document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
-      } else {
-        document.getElementById('usdInput').value = '';
-      }
-    });
-
-    document.getElementById('usdInput').addEventListener('input', (e) => {
-      const usdValue = parseFloat(e.target.value);
-      if (!isNaN(usdValue) && btcToUsdPrice) {
-        document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
-      } else {
-        document.getElementById('btcInput').value = '';
-      }
-    });
-
     fetchBitcoinPrice();
-    setInterval(fetchBitcoinPrice, 60000);
-
-    // Part 2: Maze and Sudoku Logic
-    (function () {
-      const mazeCanvas = document.getElementById("mazeCanvas");
-      const ctx = mazeCanvas.getContext("2d");
-      const mazeSize = 15;
-      const cellSize = mazeCanvas.width / mazeSize;
-      let maze, player, end;
-      let elapsedTime = 0;
-      let timerInterval;
-      let mazeSolved = false;
-
-      const sudokuContainer = document.getElementById("sudokuContainer");
-      const sudokuTable = document.getElementById("sudokuTable");
-      const solveSudokuBtn = document.getElementById("solveSudokuBtn");
-      let sudokuPuzzle = [];
-      let sudokuSolution = [];
-
-      function generateMaze(size) {
-        const maze = Array(size).fill(null).map(() => Array(size).fill(1));
-        const stack = [];
-        let x = 0,
-          y = 0;
-        maze[y][x] = 0;
-        stack.push([x, y]);
-
-        while (stack.length > 0) {
-          const [cx, cy] = stack[stack.length - 1];
-          const directions = [];
-          if (cx > 1 && maze[cy][cx - 2] === 1) directions.push([-2, 0]);
-          if (cx < size - 2 && maze[cy][cx + 2] === 1) directions.push([2, 0]);
-          if (cy > 1 && maze[cy - 2][cx] === 1) directions.push([0, -2]);
-          if (cy < size - 2 && maze[cy + 2][cx] === 1) directions.push([0, 2]);
-
-          if (directions.length > 0) {
-            const [dx, dy] = directions[Math.floor(Math.random() * directions.length)];
-            maze[cy + dy / 2][cx + dx / 2] = 0;
-            maze[cy + dy][cx + dx] = 0;
-            stack.push([cx + dx, cy + dy]);
-          } else {
-            stack.pop();
-          }
-        }
-        return maze;
-      }
-
-      function drawMaze() {
-        ctx.clearRect(0, 0, mazeCanvas.width, mazeCanvas.height);
-        for (let i = 0; i < mazeSize; i++) {
-          for (let j = 0; j < mazeSize; j++) {
-            if (maze[i][j] === 1) {
-              ctx.fillStyle = "#000";
-              ctx.fillRect(j * cellSize, i * cellSize, cellSize, cellSize);
-            }
-          }
-        }
-        ctx.fillStyle = "#f7931a";
-        ctx.fillRect(player.x * cellSize, player.y * cellSize, cellSize, cellSize);
-        ctx.fillStyle = "#33cc33";
-        ctx.fillRect(end.x * cellSize, end.y * cellSize, cellSize, cellSize);
-      }
-
-      function initializeMaze() {
-        maze = generateMaze(mazeSize);
-        player = { x: 0, y: 0 };
-        end = { x: mazeSize - 1, y: mazeSize - 1 };
-        mazeSolved = false;
-        drawMaze();
-        startTimer();
-      }
-
-      function startTimer() {
-        elapsedTime = 0;
-        clearInterval(timerInterval);
-        timerInterval = setInterval(() => {
-          elapsedTime++;
-          document.getElementById("timer").innerText = `Price updates every 60 seconds: ${elapsedTime}`;
-
-          if (elapsedTime >= 60) {
-            resetGame();
-          }
-        }, 1000);
-      }
-
-      function resetGame() {
-        clearInterval(timerInterval);
-        sudokuContainer.style.display = "none";
-        mazeCanvas.style.display = "block";
-        initializeMaze();
-      }
-
-      document.addEventListener("keydown", (e) => {
-        if (mazeSolved) return;
-        const moves = {
-          ArrowUp: { x: 0, y: -1 },
-          ArrowDown: { x: 0, y: 1 },
-          ArrowLeft: { x: -1, y: 0 },
-          ArrowRight: { x: 1, y: 0 },
-        };
-        const move = moves[e.key];
-        if (move) {
-          const newX = player.x + move.x;
-          const newY = player.y + move.y;
-          if (
-            newX >= 0 &&
-            newX < mazeSize &&
-            newY >= 0 &&
-            newY < mazeSize &&
-            maze[newY][newX] === 0
-          ) {
-            player.x = newX;
-            player.y = newY;
-            drawMaze();
-            if (player.x === end.x && player.y === end.y) {
-              mazeSolved = true;
-              showSudoku();
-            }
-          }
-        }
-      });
-
-      function showSudoku() {
-        mazeCanvas.style.display = "none";
-        sudokuContainer.style.display = "block";
-      }
-
-      initializeMaze();
-    })();
+    setInterval(fetchBitcoinPrice, 60000); // Refresh price every 60 seconds
   </script>
 </body>
 </html>
