--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitcoin Converter and Maze Game</title>
+  <title>Live Bitcoin to USD Converter | Real-Time BTC to USD Rates</title>
   <style>
     body {
       font-family: Arial, sans-serif;
