--- a/index.html
+++ b/index.html
@@ -38,6 +38,23 @@
     canvas {
       border: 2px solid #000;
       background: #fff;
+      margin-bottom: 20px;
+    }
+    #buttonContainer {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 20px;
+    }
+    #buttonContainer button {
+      width: 50px;
+      height: 50px;
+      font-size: 20px;
+      margin: 5px;
+    }
+    #middleRow {
+      display: flex;
+      justify-content: center;
     }
     .sudoku-container {
       display: none;
@@ -59,21 +76,14 @@
       font-size: 1.2rem;
       padding: 8px 15px;
     }
-    #timer {
-      font-size: 1.5rem;
-      margin-top: 20px;
-      color: #333;
-    }
   </style>
 </head>
 <body>
-  <!-- Part 1: Bitcoin and USD Conversion -->
-  <div>
-    <h1>Bitcoin and USD Converter</h1>
-    <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
-    <div id="usdToBtc" class="price">Loading 1 USD to BTC...</div>
+  <h1>Bitcoin and USD Converter</h1>
+  <div id="btcToUsd" class="price">Loading 1 BTC to USD...</div>
+  <div id="usdToBtc" class="price">Loading 1 USD to BTC...</div>
 
-    <div class="conversion-container">
+  <div class="conversion-container">
       <label for="btcInput" style="font-size: 1.5rem;">BTC:</label>
       <input
         type="number"
@@ -90,12 +100,20 @@
         style="font-size: 1.5rem; padding: 10px; margin: 10px; width: 200px;"
       />
     </div>
-  </div>
 
-  <!-- Part 2: Maze Game and Sudoku Integration -->
-  <div id="timer" style="font-size: 1.5rem;">Price updates every 60 seconds: 0</div>
+  <div id="timer">Price updates every 60 seconds: 0</div>
   <div class="challenge-container">
     <canvas id="mazeCanvas" width="300" height="300"></canvas>
+
+    <!-- Directional Buttons -->
+    <div id="buttonContainer">
+      <button id="upButton">↑</button>
+      <div id="middleRow">
+        <button id="leftButton">←</button>
+        <button id="downButton">↓</button>
+        <button id="rightButton">→</button>
+      </div>
+    </div>
 
     <!-- Sudoku Container -->
     <div id="sudokuContainer" class="sudoku-container">
@@ -106,13 +124,12 @@
   </div>
 
   <script>
-    // Part 1: Bitcoin and USD Conversion
+    // BTC and USD Conversion
     let btcToUsdPrice = null;
 
     async function fetchBitcoinPrice() {
       try {
         const response = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=bitcoin&vs_currencies=usd');
-        if (!response.ok) throw new Error('API request failed');
         const data = await response.json();
         btcToUsdPrice = data.bitcoin.usd;
         document.getElementById('btcToUsd').innerText = `1 Bitcoin = $${btcToUsdPrice.toLocaleString()} USD`;
@@ -127,7 +144,7 @@
       const btcValue = parseFloat(e.target.value);
       if (!isNaN(btcValue) && btcToUsdPrice) {
         document.getElementById('usdInput').value = (btcValue * btcToUsdPrice).toFixed(2);
-      } else {
+      }else {
         document.getElementById('usdInput').value = '';
       }
     });
@@ -136,103 +153,38 @@
       const usdValue = parseFloat(e.target.value);
       if (!isNaN(usdValue) && btcToUsdPrice) {
         document.getElementById('btcInput').value = (usdValue / btcToUsdPrice).toFixed(8);
-      } else {
+      }else {
         document.getElementById('btcInput').value = '';
       }
     });
 
+    // Fetch BTC prices initially and at intervals
     fetchBitcoinPrice();
     setInterval(fetchBitcoinPrice, 60000);
 
-    // Part 2: Maze Game and Sudoku Integration
+    // Timer
+    let elapsedTime = 0;
+    let timerInterval;
+
+    function startTimer() {
+      clearInterval(timerInterval);
+      timerInterval = setInterval(() => {
+        elapsedTime++;
+        document.getElementById("timer").innerText = `Price updates every 60 seconds: ${elapsedTime}`;
+        if (elapsedTime >= 60) {
+          elapsedTime = 0;
+          resetMaze();
+        }
+      }, 1000);
+    }
+
+    // Maze Logic
     const mazeCanvas = document.getElementById("mazeCanvas");
     const ctx = mazeCanvas.getContext("2d");
     const mazeSize = 15;
     const cellSize = mazeCanvas.width / mazeSize;
     let maze, player, end;
-    let elapsedTime = 0;
-    let timerInterval;
     let mazeSolved = false;
-
-    const sudokuContainer = document.getElementById("sudokuContainer");
-    const sudokuTable = document.getElementById("sudokuTable");
-    const solveSudokuBtn = document.getElementById("solveSudokuBtn");
-    let sudokuPuzzle = [];
-    let sudokuSolution = [];
-
-    function generateSudoku() {
-      sudokuPuzzle = Array.from({ length: 9 }, () => Array(9).fill(0));
-      sudokuSolution = Array.from({ length: 9 }, () => Array(9).fill(0));
-
-      function isValid(num, row, col, board) {
-        for (let i = 0; i < 9; i++) {
-          if (board[row][i] === num || board[i][col] === num) return false;
-
-          const boxRow = 3 * Math.floor(row / 3) + Math.floor(i / 3);
-          const boxCol = 3 * Math.floor(col / 3) + (i % 3);
-          if (board[boxRow][boxCol] === num) return false;
-        }
-        return true;
-      }
-
-      function solve(board) {
-        for (let row = 0; row < 9; row++) {
-          for (let col = 0; col < 9; col++) {
-            if (board[row][col] === 0) {
-              for (let num = 1; num <= 9; num++) {
-                if (isValid(num, row, col, board)) {
-                  board[row][col] = num;
-                  if (solve(board)) return true;
-                  board[row][col] = 0;
-                }
-              }
-              return false;
-            }
-          }
-        }
-        return true;
-      }
-
-      // Generate a complete Sudoku solution
-      solve(sudokuSolution);
-
-      // Create a puzzle by hiding some cells
-      const clues = 30; // Number of visible cells (increase for easier puzzles)
-      const positions = Array.from({ length: 81 }, (_, i) => i);
-      for (let i = 0; i < clues; i++) {
-        const pos = positions.splice(Math.floor(Math.random() * positions.length), 1)[0];
-        const row = Math.floor(pos / 9);
-        const col = pos % 9;
-        sudokuPuzzle[row][col] = sudokuSolution[row][col];
-      }
-
-      renderSudoku(sudokuPuzzle);
-    }
-
-    function renderSudoku(puzzle) {
-      sudokuTable.innerHTML = "";
-      puzzle.forEach((row, rowIndex) => {
-        const tr = document.createElement("tr");
-        row.forEach((cell, colIndex) => {
-          const td = document.createElement("td");
-          td.textContent = cell === 0 ? "" : cell;
-          tr.appendChild(td);
-        });
-        sudokuTable.appendChild(tr);
-      });
-    }
-
-    function solveSudoku() {
-      renderSudoku(sudokuSolution);
-    }
-
-    solveSudokuBtn.addEventListener("click", solveSudoku);
-
-    function showSudoku() {
-      mazeCanvas.style.display = "none";
-      sudokuContainer.style.display = "block";
-      generateSudoku();
-    }
 
     function generateMaze(size) {
       const maze = Array(size).fill(null).map(() => Array(size).fill(1));
@@ -284,38 +236,16 @@
       end = { x: mazeSize - 1, y: mazeSize - 1 };
       mazeSolved = false;
       drawMaze();
-      startTimer();
     }
 
-    function startTimer() {
-      elapsedTime = 0;
-      clearInterval(timerInterval);
-      timerInterval = setInterval(() => {
-        elapsedTime++;
-        document.getElementById("timer").innerText = `Price updates every 60 seconds: ${elapsedTime}`;
-
-        if (elapsedTime >= 60) {
-          resetGame();
-        }
-      }, 1000);
-    }
-
-    function resetGame() {
-      clearInterval(timerInterval);
-      sudokuContainer.style.display = "none";
-      mazeCanvas.style.display = "block";
-      initializeMaze();
-    }
-
-    document.addEventListener("keydown", (e) => {
-      if (mazeSolved) return;
+    function movePlayer(direction) {
       const moves = {
         ArrowUp: { x: 0, y: -1 },
         ArrowDown: { x: 0, y: 1 },
         ArrowLeft: { x: -1, y: 0 },
         ArrowRight: { x: 1, y: 0 },
       };
-      const move = moves[e.key];
+      const move = moves[direction];
       if (move) {
         const newX = player.x + move.x;
         const newY = player.y + move.y;
@@ -331,13 +261,111 @@
           drawMaze();
           if (player.x === end.x && player.y === end.y) {
             mazeSolved = true;
-            if (elapsedTime <= 30) showSudoku();
+            if (elapsedTime <= 30) {
+              showSudoku();
+            }
           }
         }
       }
+    }
+
+    function resetMaze() {
+      document.getElementById("sudokuContainer").style.display = "none";
+      document.getElementById("mazeCanvas").style.display = "block";
+      document.getElementById("buttonContainer").style.display = "flex";
+      initializeMaze();
+    }
+
+    function showSudoku() {
+      document.getElementById("mazeCanvas").style.display = "none";
+      document.getElementById("buttonContainer").style.display = "none";
+      document.getElementById("sudokuContainer").style.display = "block";
+      generateSudoku();
+    }
+
+    // Sudoku Generation and Solve Logic
+    let solution = [];
+    function generateSudoku() {
+      const sudokuTable = document.getElementById("sudokuTable");
+      sudokuTable.innerHTML = "";
+      const puzzle = Array.from({ length: 9 }, () => Array(9).fill(0));
+      solution = Array.from({ length: 9 }, () => Array(9).fill(0));
+
+      function isValid(num, row, col, grid) {
+        for (let x = 0; x < 9; x++) {
+          if (grid[row][x] === num || grid[x][col] === num) return false;
+          const boxRow = Math.floor(row / 3) * 3 + Math.floor(x / 3);
+          const boxCol = Math.floor(col / 3) * 3 + (x % 3);
+          if (grid[boxRow][boxCol] === num) return false;
+        }
+        return true;
+      }
+
+      function solve(grid) {
+        for (let row = 0; row < 9; row++) {
+          for (let col = 0; col < 9; col++) {
+            if (grid[row][col] === 0) {
+              for (let num = 1; num <= 9; num++) {
+                if (isValid(num, row, col, grid)) {
+                  grid[row][col] = num;
+                  if (solve(grid)) return true;
+                  grid[row][col] = 0;
+                }
+              }
+              return false;
+            }
+          }
+        }
+        return true;
+      }
+
+      // Generate a valid solution
+      solve(solution);
+
+      // Generate a puzzle by removing some numbers
+      const clues = 30; // Adjust clues for difficulty
+      const positions = Array.from({ length: 81 }, (_, i) => i);
+      for (let i = 0; i < clues; i++) {
+        const pos = positions.splice(Math.floor(Math.random() * positions.length), 1)[0];
+        const row = Math.floor(pos / 9);
+        const col = pos % 9;
+        puzzle[row][col] = solution[row][col];
+      }
+
+      // Render the puzzle
+      puzzle.forEach((row) => {
+        const tr = document.createElement("tr");
+        row.forEach((cell) => {
+          const td = document.createElement("td");
+          td.textContent = cell === 0 ? "" : cell;
+          tr.appendChild(td);
+        });
+        sudokuTable.appendChild(tr);
+      });
+    }
+
+    document.getElementById("solveSudokuBtn").addEventListener("click", () => {
+      const sudokuTable = document.getElementById("sudokuTable");
+      sudokuTable.innerHTML = "";
+      solution.forEach((row) => {
+        const tr = document.createElement("tr");
+        row.forEach((cell) => {
+          const td = document.createElement("td");
+          td.textContent = cell;
+          tr.appendChild(td);
+        });
+        sudokuTable.appendChild(tr);
+      });
     });
 
+    document.addEventListener("keydown", (e) => movePlayer(e.key));
+    document.getElementById("upButton").addEventListener("click", () => movePlayer("ArrowUp"));
+    document.getElementById("downButton").addEventListener("click", () => movePlayer("ArrowDown"));
+    document.getElementById("leftButton").addEventListener("click", () => movePlayer("ArrowLeft"));
+    document.getElementById("rightButton").addEventListener("click", () => movePlayer("ArrowRight"));
+
     initializeMaze();
+    startTimer();
   </script>
 </body>
 </html>
